@@ -8641,7 +8641,7 @@ static inline void translate_insn(
     RTLUnit * const unit = ctx->unit;
 
     /* Skip instructions which were translated as part of an optimized
-     * instruction pair. */
+     * instruction pair (such as sc followed by blr). */
     if (ctx->skip_next_insn) {
         ctx->skip_next_insn = false;
         return;
@@ -8839,10 +8839,33 @@ static inline void translate_insn(
         return;
 
       case OPCD_SC: {
+        /* Special case: translate sc followed by blr in a single step, to
+         * avoid having to return to caller and call a new unit containing
+         * just the blr.  The scanner will terminate the block at an sc
+         * instruction which is not followed by a blr, so we only need to
+         * check whether this sc is at the end of the block. */
+        bool is_sc_blr = false;
+        if ((ctx->handle->guest_opt & BINREC_OPT_G_PPC_SC_BLR)
+         && address + 4 < block->start + block->len) {
+            ASSERT(address + 8 == block->start + block->len);
+            const uint32_t *memory_base =
+                (const uint32_t *)ctx->handle->setup.guest_memory_base;
+            const uint32_t next_insn = bswap_be32(memory_base[(address+4)/4]);
+            ASSERT(next_insn == 0x4E800020);
+            is_sc_blr = true;
+        }
+        int nia;
+        if (is_sc_blr) {
+            const int lr = get_lr(ctx);
+            nia = rtl_alloc_register(unit, RTLTYPE_INT32);
+            rtl_add_insn(unit, RTLOP_ANDI, nia, lr, 0, -4);
+        } else {
+            nia = rtl_imm32(unit, address + 4);
+        }
         guest_ppc_flush_cr(ctx, false);
         guest_ppc_flush_fpscr(ctx);
         flush_live_regs(ctx, true);
-        set_nia_imm(ctx, address + 4);
+        set_nia(ctx, nia);
         const int sc_handler = rtl_alloc_register(unit, RTLTYPE_ADDRESS);
         rtl_add_insn(unit, RTLOP_LOAD, sc_handler, ctx->psb_reg, 0,
                      ctx->handle->setup.state_offsets_ppc.sc_handler);
@@ -8858,6 +8881,7 @@ static inline void translate_insn(
         post_insn_callback(ctx, address);
         rtl_add_insn(unit, RTLOP_RETURN, 0, ctx->psb_reg, 0, 0);
         ctx->psb_reg = old_psb;
+        ctx->skip_next_insn = is_sc_blr;
         return;
       }  // case OPCD_SC
 
