@@ -1328,7 +1328,8 @@ bool guest_ppc_scan(GuestPPCContext *ctx, uint32_t limit)
          * to help out data flow analysis, since we need to be able to
          * store all live register values to the state block if a trap is
          * taken.)  Also terminate the entire unit if this looks like the
-         * end of a function. */
+         * end of a function.  But make sure not to stop at an sc before
+         * a blr so we can optimize the sc+blr case properly. */
         const bool is_direct_branch = ((opcd & ~0x02) == OPCD_BC);
         const bool is_indirect_branch =
             (opcd == OPCD_x13 && (insn_XO_10(insn) == XO_BCLR
@@ -1338,7 +1339,10 @@ bool guest_ppc_scan(GuestPPCContext *ctx, uint32_t limit)
              || ((opcd == OPCD_BC || is_indirect_branch)
                  && (insn_BO(insn) & 0x14) == 0x14));
         const bool is_icbi = (opcd == OPCD_x1F && insn_XO_10(insn) == XO_ICBI);
-        const bool is_sc = (opcd == OPCD_SC);
+        const bool is_sc =
+            (opcd == OPCD_SC
+             && (insn_count == max_insns - 1
+                 || bswap_be32(memory_base[(address+4)/4]) != 0x4E800020));
         /* Also terminate at a GQR write for constant GQR optimization. */
         const bool is_terminal_gqr_write =
             ((ctx->handle->guest_opt & BINREC_OPT_G_PPC_CONSTANT_GQRS)
